--- a/src/scss/mortgage.scss
+++ b/src/scss/mortgage.scss
@@ -2,64 +2,15 @@
   margin: 0;
   padding: 0;
 }
-.body {
-  margin-left: 170px;
+.container {
 }
 ul {
   list-style: none;
 }
-// .info {
-//   &__radioBtn {
-//     width: 208px;
-//     height: 96px;
 
-//     background: #031d40;
-//     border-radius: 8px;
-
-//     /* Inside auto layout */
-
-//     flex: none;
-//     order: 0;
-//     flex-grow: 1;
-//     display: none;
-//   }
-// }
-.info {
-  &__heading {
-    display: flex;
-    margin: 60px 160px 24px 0px;
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-  }
-  &__bottom {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 12px 20px;
-    height: 48px;
-    color: #ffffff;
-    background: #0468ff;
-    border-radius: 4px;
-    margin: 0px 530px 80px 0px;
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-  }
-  &__text {
-    display: flex;
-    width: 682px;
-    height: 72px;
-  }
-  &__svg {
-    position: absolute;
-    margin: 0px 0px 0px 750px;
-  }
-  &__subtitle {
-    margin-bottom: 36px;
-  }
+.bets {
+  margin-left: 170px;
 }
-
 .bets__info {
   display: inline-block;
   width: 208px;
@@ -92,30 +43,7 @@ ul {
 }
 
 .bets__info-radioBtn {
-  // display: none;
-}
-
-.bet {
-  margin-left: 28px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 16px;
-  z-index: 2;
-  color: #ffffff;
-  // background-image: url("  ../assets/buildings.png");
-  background: linear-gradient(180deg, #006cfd 0.05%, #3b92fd 32.34%, #c1e8fd 100%);
-
-  &__header-text {
-    display: flex;
-    margin: 28px 0 16px 28px;
-  }
-  &__elInfo {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 50px;
-  }
+  display: none;
 }
 
 .demo {
