--- a/src/style/mortgage.css
+++ b/src/style/mortgage.css
@@ -3,46 +3,12 @@
   padding: 0;
 }
 
-.body {
-  margin-left: 170px;
-}
-
 ul {
   list-style: none;
 }
 
-.info__heading {
-  display: flex;
-  margin: 60px 160px 24px 0px;
-  flex: none;
-  order: 1;
-  flex-grow: 0;
-}
-.info__bottom {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 12px 20px;
-  height: 48px;
-  color: #ffffff;
-  background: #0468ff;
-  border-radius: 4px;
-  margin: 0px 530px 80px 0px;
-  flex: none;
-  order: 1;
-  flex-grow: 0;
-}
-.info__text {
-  display: flex;
-  width: 682px;
-  height: 72px;
-}
-.info__svg {
-  position: absolute;
-  margin: 0px 0px 0px 750px;
-}
-.info__subtitle {
-  margin-bottom: 36px;
+.bets {
+  margin-left: 170px;
 }
 
 .bets__info {
@@ -76,25 +42,8 @@ ul {
   padding: 0px 161px 20px 16px;
 }
 
-.bet {
-  margin-left: 28px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 16px;
-  z-index: 2;
-  color: #ffffff;
-  background: linear-gradient(180deg, #006cfd 0.05%, #3b92fd 32.34%, #c1e8fd 100%);
-}
-.bet__header-text {
-  display: flex;
-  margin: 28px 0 16px 28px;
-}
-.bet__elInfo {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 50px;
+.bets__info-radioBtn {
+  display: none;
 }
 
 .demo {
